update service worker

--- a/src/app.pug
+++ b/src/app.pug
@@ -14,7 +14,7 @@
         warning-toast
         .form-group.mt-3
           textarea#raw-text.form-control(cols="30" rows="10" style="white-space: nowrap;  overflow: auto;")
-        button.btn.btn-primary(type="submit") 轉換！
+        button.btn.btn-primary#btn-translate(type="submit") 轉換！
 
     .col-12.col-lg-12.col-xl-8.p-2.py-xl-5.border.border-white
       investigation-list
